--- a/08_events/one.html
+++ b/08_events/one.html
@@ -129,7 +129,7 @@
       function (e) {
         console.log(e.target.parentNode);
         if (e.target.tagName == "IMG") {
-          console.log(e.target.id);
+          console.log(e.target);
           let removeIt = e.target.parentNode;
           removeIt.remove();
         }
